add version 2 styles & markup

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 </head>
 <body>
   <!-- Forked from a template on Tutorialzine: https://tutorialzine.com/2016/06/freebie-landing-page-template-with-flexbox -->
-<nav>
-  <h2 class="logo"><a href="#">Mountain Travel</a></h2>
-  <ul>
-    <li><a href="#">Tours</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</nav>
-<header>
-  <div class="greeting">
-    <h1>Mountain Travel</h1>
-    <h3>Unmissable Adventures Around The World</h3>
-    <button class="btn">Contact Us Now</button>
-  </div>
-</header>
-<main>
+  <header>
+    <h2><a href="#">Mountain Travel</a></h2>
+    <nav>
+      <li><a href="#">Tours</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </nav>
+  </header>
 
-</main>
+  <section class="hero">
+    <div class="background-image" style="background-image: url(assets/img/main.jpg);"></div>
+    <div class="hero-content-area">
+      <h1>Mountain Travel</h1>
+      <h3>Unmissable Adventure Tours Around The World</h3>
+      <a href="#" class="btn">Contact Us Now</a>
+    </div>
+  </section>
+  
 </body>
 </html>
