style reviews, contact, and footer

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <hr>
     <p class="quote">Wow! This tour made me realize how much I love mountains. After going on one of these tours, I can safely say that they are my favorite geographic feature, and my favorite word starts with M.</p>
     <p class="author">- Colt Steele</p>
-    <p class="quote">I never understood why people cared so much about the mountains. But then I went on one of these tours. Now I can't understand people who <i>dont'</i> care about mountains!</p>
+    <p class="quote">I never understood why people cared so much about the mountains. But then I went on one of these tours. Now I can't understand people who <em>don't</em> care about mountains!</p>
     <p class="author">- Elie Schoppik</p>
     <p class="quote">If you want to understand the universe, head to the mountains. I mean, seriously. It's like, woah. You know? It's like that.</p>
     <p class="author">- Tom Workman</p>
@@ -92,9 +92,9 @@
 
   <footer>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><a href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+      <li><a href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+      <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
     </ul>
     <p>Made by Tom Workman</p>
   </footer>
